// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Section /> should render hidden when no children rendered 1`] = `
<Section
  className={null}
  title="my.headline"
  titleParams={Object {}}
>
  <section
    aria-labelledby="my-headline"
    className="css-gyrv08"
  >
    <h1
      className="css-1krt3b8"
      id="my-headline"
    >
      <Translate
        params={Object {}}
        string="my.headline"
      >
        my.headline
      </Translate>
    </h1>
  </section>
</Section>
`;

exports[`<Section /> should render visible 1`] = `
<Section
  className={null}
  title="my.headline"
  titleParams={
    Object {
      "some": "params",
    }
  }
>
  <section
    aria-labelledby="my-headline"
    className=""
  >
    <h1
      className="css-1krt3b8"
      id="my-headline"
    >
      <Translate
        params={
          Object {
            "some": "params",
          }
        }
        string="my.headline"
      >
        my.headline
      </Translate>
    </h1>
    <div
      id="child-component"
    />
  </section>
</Section>
`;
